Update Bugsnag/DSL-JSON